[package]
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
description = "async-session backend implemented in sea-orm"
documentation = "https://docs.rs/async-sea-orm-session"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "async-sea-orm-session"
readme = "README.md"
repository = "https://github.com/dcchut/async-sea-orm-session"
version = "0.1.2"

[package.metadata.docs.rs]
all-features = true
features = [
  "migration",
]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["migration"]
migration = ["sea-orm-migration"]

[dependencies]
async-session = {version = "3.0"}
sea-orm = {version = "0.10.4"}
sea-orm-migration = {version = "0.10.4", optional = true}
serde_json = {version = "1.0"}

[dev-dependencies]
sea-orm = {version = "0.9", features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
tokio = {version = "1.19", features = ["rt", "macros"]}
