[package]
name = "async-sea-orm-session"
version = "0.3.0"
edition = "2021"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "async-session backend implemented in sea-orm"
repository = "https://github.com/dcchut/async-sea-orm-session"
documentation = "https://docs.rs/async-sea-orm-session"
readme = "README.md"

[package.metadata.docs.rs]
features = [
    "migration",
]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["migration"]
migration = ["sea-orm-migration"]

[dependencies]
async-session = { version = "3.0" }
sea-orm = { version = "0.11" }
sea-orm-migration = { version = "0.11", optional = true }
serde_json = { version = "1.0" }

[dev-dependencies]
tokio = { version = "1.24", features = ["rt", "macros"]}
sea-orm = { version = "0.11", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
