[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-sea-orm-session = { path = "../.." }
axum = "0.5"
sea-orm = { version = "0.8", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["rt", "macros"] }
tower-cookies = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }