[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-sea-orm-session = { path = "../.." }
axum = "0.6"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "macros"] }
tower-cookies = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]